--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,8 @@ h1 {
     height: 400px;
     background-color: pink;
     margin: auto;
+    font-family: Major Mono Display;
+    text-align: center;
   }
 
   .caja1{
@@ -19,7 +21,6 @@ h1 {
 
   
   #emoji1{
-    margin-top: 40px;
     display: flex;
     justify-content: center;
     font-size: 2em;
@@ -93,7 +94,7 @@ h1 {
   }
   
   #emoji6{
-    margin-top: 40px;
+    margin-top: 10px;
     display: flex;
     justify-content: center;
     font-size: 2em;
@@ -164,7 +165,7 @@ h1 {
     }
   
   #emoji11{
-    margin-top: 40px;
+    margin-top: 10px;
     display: flex;
     justify-content: center;
     font-size: 2em;
@@ -204,7 +205,7 @@ h1 {
     }
   
   #emoji14{
-    margin-top: 40px;
+    margin-top: 0,5px;
     display: flex;
     justify-content: center;
     font-size: 2em;
