--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,16 @@ h1 {
     text-align: center;
   }
 
+  @keyframes aparecerDesaparecer {
+    0%, 100% { opacity: 1; }
+    50% { opacity: 0; }
+  }
+  
+  .emoji {
+    animation: aparecerDesaparecer 2s infinite;
+  }
+  
+
   .caja1{
     width:150px;
     height:100px;
