--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,9 @@ h1 {
   
   .emoji {
     animation: aparecerDesaparecer 2s infinite;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   
 
@@ -76,8 +79,8 @@ h1 {
   #emoji4{
     display: flex;
     align-items: center;
-    margin-left: 100px;
     font-size: 2em;
+    justify-content: center;
   }
   
   .caja5{
